# octave

./: .gitignore  .hestai  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  PLACEHOLDER_AUDIT.md  README.md  README2.md  README3.md  REVIEW_NOTES.md  SETUP.md  mypy.ini  pyproject.toml  pytest_output.txt  setup-mcp.sh
debates/: issue-32-inherit-syntax.json
docs/: api.md  assessment-validation-gaps.md  b3-integration-report.md  configurability-analysis.md  implementation-roadmap.md  mcp-configuration.md  repo-assessment.md  usage.md
evidence/: README.md  llm-native-encoding-patterns-research.oct.md  octave-mythological-semantics-comprehension-test-2025-06-19.md  octave-validation-summary.md  subagent-compression-study.md
examples/: README.md  code-review-specialist-claude-subagent.oct.md  octave-vs-llmlingua-compression-comparison-2025.md  research-article-after.md  survey-octave-5-lossless.oct.md  survey-prose-version.md  system-status-after.oct.md  system-status-before.json
guides/: OCTAVE_LITERACY_PATTERNS.oct.md  README.md  llm-octave-authoring-guide.oct.md  llm-octave-compression-rules.oct.md  llm-octave-quick-reference.oct.md  octave-5-guide.md  octave-agent-creation-guide.oct.md  octave-agent-patterns-explained.oct.md  octave-canonical-examples.oct.md  octave-literacy-patterns.oct.md  octave-mastery.oct.md  octave-micro-primer.oct.md  octave-philosophy.md  octave-philosophy.oct.md  octave-quick-start.md
json/: JSON_SCHEMA.md  README.md  json-schema.md
repomix-integration/: EMPIRICAL_RESULTS.md  README.md  empirical-results.md  octave_enhance_comprehensive.py  octave_enhance_targeted.py
research/: octave-5-survey-related-systems-octave-compressed.oct.md  octave-5-survey-related-systems.md  octave-5-survey-related-systems.oct.md
skills/: README.md
specs/: README.oct.md  octave-4.oct.md  octave-5-data.oct.md  octave-5-execution.oct.md  octave-5-llm-agents.oct.md  octave-5-llm-core.oct.md  octave-5-llm-data.oct.md  octave-5-llm-execution.oct.md  octave-5-llm-rationale.oct.md  octave-5-llm-schema.oct.md  octave-5-llm-skills.oct.md  octave-5-llm.oct.md  octave-5-schema.oct.md  octave-5.oct.md  (+3 more)
(+263 files in other folders)
